--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-# Database URL
-# For local development with SQLite:
-# DATABASE_URL="file:./dev.db"
-# For production with PostgreSQL (Neon, Supabase, Railway):
+# Database URL - PostgreSQL connection string
+# For production use Railway, Neon, Supabase, or Vercel Postgres
 DATABASE_URL="postgresql://user:password@host:5432/database?schema=public"
 
 # Base URL of your application
