--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "./build.sh",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm ci"
